welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value ba
	if ( (a<21 && a>9) && (ba<21 && b>9) ) { Math.max (a,b) }
                               ^